@@ -272,6 +272,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		migrated all cocos2d code and all test to using the CC namespace
 	* samkass:
 		install_template.sh suports custom directory. patch.
+		install-template can be installed in user directory. patch.
 	* Scott Iisystems:
 		TextureAtlas signed math error patch
 		BezierBy#reverse patch
