@@ -1,6 +1,7 @@
 version 0.99.3 - 00-May-2010
  . [FIX] Grid: Fixed memory leak (issue #853)
  . [FIX] Particles: Removed unnecesary assert (issue #851)
+ . [FIX] Templates: templates can be installed in user directory (issue #856)
  
 version 0.99.2 - 28-Apr-2010
  . [FIX] ActionManager: removeByTag doesn't crash if action is also running (issue #841)
